Started from scratch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
     <body style="background-color:lightpink">
-      <img src="1*YFli-qDx2gGNro9nXa33dg.jpg" alt="washed out James Charles" style="height:400px;">
+      <img src="Washed out James Charles.jpg" alt="washed out James Charles" style="height:400px;">
       <h1>
         Fiffy Olafenwa
       </h1>
